--- a/chessEasy/chessEasy/chessEasy.csproj
+++ b/chessEasy/chessEasy/chessEasy.csproj
@@ -63,6 +63,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interfaces\ICanMoveCardinally.cs" />
+    <Compile Include="Interfaces\ICanMoveDiagonally.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
